RESOLVED FIXED131241
Web Inspector: Log JS Exceptions to System Console if JavaScriptCoreOutputConsoleMessagesToSystemConsole enabled
https://bugs.webkit.org/show_bug.cgi?id=131241
Summary Web Inspector: Log JS Exceptions to System Console if JavaScriptCoreOutputCon...
Joseph Pecoraro
Reported 2014-04-04 15:20:36 PDT
We do this in WebCore when enabling the system console logging. We should do this for exceptions as well. I did not include the backtrace of the exception, but we could add that if we want to.
Attachments
[PATCH] Proposed Fix (2.02 KB, patch)
2014-04-04 15:21 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2014-04-04 15:21:10 PDT
Joseph Pecoraro
Comment 2 2014-04-04 15:21:55 PDT
Created attachment 228620 [details] [PATCH] Proposed Fix
Timothy Hatcher
Comment 3 2014-04-04 16:24:35 PDT
Comment on attachment 228620 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=228620&action=review > Source/JavaScriptCore/inspector/JSGlobalObjectInspectorController.cpp:162 > + ConsoleClient::printConsoleMessage(MessageSource::JS, MessageType::Log, MessageLevel::Error, errorMessage, callFrame.sourceURL(), callFrame.lineNumber(), callFrame.columnNumber()); Would be good to print the whole stack by passing in callStack and treating it like a console.trace.
WebKit Commit Bot
Comment 4 2014-04-04 16:55:25 PDT
Comment on attachment 228620 [details] [PATCH] Proposed Fix Clearing flags on attachment: 228620 Committed r166816: <http://trac.webkit.org/changeset/166816>
WebKit Commit Bot
Comment 5 2014-04-04 16:55:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.